2008-07-19  Johan Dahlin  <johan@gnome.org>

	* examples/gio/directory-async.py:
	Only fetch name, saves a couple of syscalls.
	* gio/gio.override:
	Set name to gio._gio so pychecker/pydoc works.

2008-07-18  Johan Dahlin  <johan@gnome.org>

	* examples/gio/directory-async.py:
	* gio/gfile.override:
	* gio/gfileenumerator.override:
	* gio/gio.defs:
	* tests/test_gio.py:
	Wrap gio.File.enumerate_children_async, add tests, docstring
	and an example.
	Also document gio.File.enumerate while we're at it.

2008-07-18  Johan Dahlin  <johan@gnome.org>

	* gio/gfile.override:
	Use %zd instead of %d since it's a Py_ssize_t and not an int.

2008-07-18  Johan Dahlin  <johan@gnome.org>

	* gio/pygio-utils.h:
	define NO_IMPORT_PYGOBJECT before including pygobject.h

2008-07-18  Johan Dahlin  <johan@gnome.org>

	* gio/giomodule.c (init_gio):
	Require pygobject 2.15.2

2008-07-17  Johan Dahlin  <johan@gnome.org>

	* gio/giomodule.c (init_gio):
	Add a pygio_version module attribute
	(DL_EXPORT): The module is called gio._gio, not just _gio.

2008-07-17  Johan Dahlin  <johan@gnome.org>

	* gio/gio-types.defs:
	Rename gio.IOErrorEnum to gio.ErrorEnum

2008-07-17  Johan Dahlin  <johan@gnome.org>

	* gio/giomodule.c (init_gio):
	Add gio.ERROR which maps to the G_IO_ERROR quark.

2008-07-17  Johan Dahlin  <johan@gnome.org>

	* gio/giomodule.c (init_gio):
	Use the prefix G_IO_ for stripping constants instead of just G_
	* gobject/gobjectmodule.c (pyg_constant_strip_prefix):
	Check so the fist part of name and strip_prefix are the same,
	if they don't, just strip of the part of strip_prefix which
	matches.

	This removes the initial IO_* prefix for some constants in gio.
	Eg, gio.IO_ERROR_* -> gio.ERROR_*

2008-07-16  Johan Dahlin  <johan@gnome.org>
	
	* configure.ac: Post release version bump

=== 2.15.1 ===
2008-07-16  Johan Dahlin  <johan@gnome.org>

	* NEWS: Update

2008-07-15  Paul Pogonyshev  <pogonyshev@gmx.net>

	* codegen/pygobject-codegen-2.0.in: Rename from