@@ -54,3 +54,87 @@ _wrap_g_file_enumerator_tp_iternext(PyGObject *iter)
 
     return pygobject_new((GObject*)file_info);
 }
+%%
+override g_file_enumerator_next_files_async kwargs
+static PyObject *
+_wrap_g_file_enumerator_next_files_async(PyGObject *self, PyObject *args, PyObject *kwargs)
+{
+    static char *kwlist[] = { "num_files", "callback",
+			      "io_priority", "cancellable", "user_data", NULL };
+    PyGAsyncRequestNotify *notify;
+    int num_files;
+    int io_priority = G_PRIORITY_DEFAULT;
+    GCancellable *cancellable = NULL;
+    PyGObject *py_cancellable = NULL;
+
+    notify = g_slice_new0(PyGAsyncRequestNotify);
+
+    if (!PyArg_ParseTupleAndKeywords(args, kwargs,
+				     "iO|iOO:GFileEnumerator.enumerate_children_async",
+				     kwlist,
+				     &num_files,
+				     &notify->callback,
+				     &io_priority,
+				     &py_cancellable,
+				     &notify->data))
+    {
+      g_slice_free(PyGAsyncRequestNotify, notify);
+      return NULL;
+    }
+
+    if (!PyCallable_Check(notify->callback))
+    {
+	PyErr_SetString(PyExc_TypeError, "callback argument not callable");
+	g_slice_free(PyGAsyncRequestNotify, notify);
+	return NULL;
+    }
+    Py_INCREF(notify->callback);
+    Py_XINCREF(notify->data);
+  
+    if (!pygio_check_cancellable(py_cancellable, &cancellable))
+	return NULL;
+    
+    g_file_enumerator_next_files_async(G_FILE_ENUMERATOR(self->obj),
+				       num_files,
+				       io_priority,
+				       (GCancellable *) cancellable,
+				       (GAsyncReadyCallback)async_result_callback_marshal,
+				       notify);
+    
+    Py_INCREF(Py_None);
+    return Py_None;
+}
+%%
+override g_file_enumerator_next_files_finish kwargs
+static PyObject *
+_wrap_g_file_enumerator_next_files_finish(PyGObject *self, PyObject *args, PyObject *kwargs)
+{
+    static char *kwlist[] = { "result", NULL };
+    PyGObject *result;
+    GList *next_files, *l;
+    GError *error = NULL;
+    PyObject *ret;
+    
+    if (!PyArg_ParseTupleAndKeywords(args, kwargs,
+				     "O!:GFileEnumerator.next_files_finish",
+				     kwlist,
+				     &PyGAsyncResult_Type, &result))
+        return NULL;
+    
+    next_files = g_file_enumerator_next_files_finish(G_FILE_ENUMERATOR(self->obj),
+						     G_ASYNC_RESULT(result->obj),
+						     &error);
+    if (pyg_error_check(&error))
+        return NULL;
+
+    ret = PyList_New(0);
+    for (l = next_files; l; l = l->next) {
+	GFileInfo *file_info = l->data;
+	PyObject *item = pygobject_new((GObject *)file_info);
+	PyList_Append(ret, item);
+	Py_DECREF(item);
+    }
+    g_list_free(next_files);
+
+    return ret;
+}
